--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,41 +7,37 @@
     <title>Juegos interactivos</title>
     <style>
         body {
-            background-color: #1c2b33;
-            color: white;
-            font-family: sans-serif;
+            background-color: #f8f1ed;
+            color: #555;
+            font-family: Arial, sans-serif;
             text-align: center;
         }
 
         h1 {
-            margin-top: 50px;
-            font-size: 48px;
+            font-size: 36px;
+            margin-top: 30px;
+            margin-bottom: 20px;
         }
 
         h3 {
+            font-size: 24px;
             margin-top: 50px;
-            font-size: 36px;
+            margin-bottom: 20px;
         }
 
         iframe {
-            margin-top: 20px;
-            max-width: 100%;
+            margin: 0 auto;
+            display: block;
         }
     </style>
 </head>
 <body>
     <h1>Juegos sobre reacciones exotérmicas y endotérmicas</h1>
-    <div>
-        <h3>Juego 1</h3>
-        <iframe src="https://wordwall.net/es/embed/5bcb0699c10f4c699d44e305401c9449?themeId=1&templateId=2&fontStackId=0" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <div>
-        <h3>Juego 2</h3>
-        <iframe src="https://wordwall.net/es/embed/6eb32551e5dc43e7899db1ad84d7d3c4?themeId=22&templateId=45&fontStackId=0" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <div>
-        <h3>Juego 3</h3>
-        <iframe src="https://wordwall.net/es/embed/e79dcf3035d54c46b7ee9bba4f9a2c43?themeId=45&templateId=49&fontStackId=12" frameborder="0" allowfullscreen></iframe>
-    </div>
+    <h3>Juego1</h3>
+    <iframe src="https://wordwall.net/es/embed/5bcb0699c10f4c699d44e305401c9449?themeId=1&templateId=2&fontStackId=0" width="800" height="600" frameborder="0" allowfullscreen></iframe><br><br>
+    <h3>Juego2</h3>
+    <iframe src="https://wordwall.net/es/embed/6eb32551e5dc43e7899db1ad84d7d3c4?themeId=22&templateId=45&fontStackId=0" width="800" height="600" frameborder="0" allowfullscreen></iframe><br><br>
+    <h3>Juego3</h3>
+    <iframe src="https://wordwall.net/es/embed/e79dcf3035d54c46b7ee9bba4f9a2c43?themeId=45&templateId=49&fontStackId=12" width="800" height="600" frameborder="0" allowfullscreen></iframe><br><br>
 </body>
 </html>
